# thaifin-att

./: README.md  proposed_improvements.md  pyproject.toml
airflow/dags/: thaifin_pipeline_dag.py
backend/: database.py  ingest.py  main.py  models.py
dagster_pipeline/: __init__.py  test_config.json
dagster_pipeline/assets/: pipeline.py
dbt-sqlite/: .user.yml  dbt_project.yml  profiles.yml
dbt-sqlite/models/marts/: stg_companies.sql  stg_financials.sql
dbt-sqlite/models/staging/: sources.yml
frontend/: index.html  package-lock.json
frontend/src/: AnalysisHub.jsx  App.jsx  DCFValuation.jsx  Dashboard.jsx  PortfolioOptimizer.jsx  QuantDashboard.jsx  Screener.jsx  SectorView.jsx  StockList.jsx  UserGuide.jsx  api.js  index.css  tooltipData.js
