[project]
name = "thaifin"
version = "1.0.0"
description = "A Python library for access thai stock fundamental data up to 10+ years."
authors = [{name = "Nutchanon Ninyawee", email = "me@nutchanon.org"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "furl>=2.1.0",
    "arrow>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "cachetools>=5.0.0",
    "tenacity>=8.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-levenshtein>=0.27.1",
    "types-cachetools>=6.1.0.20250717",
    "pandas-stubs>=2.3.0.250703",
    "ruff>=0.12.4",
    "rapidfuzz>=3.13.0",
    "ipython>=9.4.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sqlalchemy>=2.0.48",
    "apscheduler>=3.11.2",
    "pydantic-settings>=2.13.1",
    "yfinance>=1.2.0",
    "scipy>=1.17.1",
    "pyportfolioopt>=1.6.0",
    "packaging>=25.0",
]

[project.optional-dependencies]
full = ["python-levenshtein>=0.25.0"]
dev = [
    "pytest>=8.0.0",
    "jupyter>=1.0.0",
    "tqdm>=4.60.0",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
    "pdoc>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pdoc>=15.0.4",
    "pytest>=8.4.1",
    "tqdm>=4.67.1",
]

[tool.mypy]
check_untyped_defs = true
